--- a/chapter02.qmd
+++ b/chapter02.qmd
@@ -25,21 +25,21 @@ The design of devices that used air energy dates back to the 18th century (with 
 
 #### Comparison with other technologies
 
-+--------------------------+--------------------------------------------------------------------------------+--------------------------------------------------------------------------------+---------------------------------------------------------------------------+------------+
-| ### Leaks                | ### Electricity                                                                | ### Hydraulic                                                                  | ### Pneumatic                                                             |            |
-|                          |                                                                                |                                                                                |                                                                           |            |
-|                          |                                                                                | Pollution                                                                      | Apart from energy loss, no disadvantages.                                 |            |
-+--------------------------+--------------------------------------------------------------------------------+--------------------------------------------------------------------------------+---------------------------------------------------------------------------+------------+
-|                          |                                                                                |                                                                                |                                                                           |            |
-+--------------------------+--------------------------------------------------------------------------------+--------------------------------------------------------------------------------+---------------------------------------------------------------------------+------------+
-| Environmental influences | Explosion hazard in certain environments; relatively sensitive to temperature. | Sensitive to temperature fluctuations; Fire hazard in case of leaks.           | Does not cause explosions; Insensitive to temperatures.                   |            |
-+--------------------------+--------------------------------------------------------------------------------+--------------------------------------------------------------------------------+---------------------------------------------------------------------------+------------+
-| Energy storage           | Difficult and only in small quantities using batteries                         | Within certain limits, using gases                                             | Easy                                                                      |            |
-+--------------------------+--------------------------------------------------------------------------------+--------------------------------------------------------------------------------+---------------------------------------------------------------------------+------------+
-| Energy transport         | Unlimited, but with energy loss                                                | Up to 100 m with flow velocity of v = 2-6 m/s, signal velocity up to 1000 m/s. | Up to 1000 m with flow velocity v = 20-40 m/s, signal velocity 20-40 m/s. |            |
-+--------------------------+--------------------------------------------------------------------------------+--------------------------------------------------------------------------------+---------------------------------------------------------------------------+------------+
-| Working speed            |                                                                                | v = 0.5 m/s                                                                    | v = 1.5 m/s                                                               |            |
-+--------------------------+--------------------------------------------------------------------------------+--------------------------------------------------------------------------------+---------------------------------------------------------------------------+------------+
++--------------------------+--------------------------------------------------------------------------------+--------------------------------------------------------------------------------+---------------------------------------------------------------------------+---+
+| ### Leaks                | ### Electricity                                                                | ### Hydraulic                                                                  | ### Pneumatic                                                             |   |
+|                          |                                                                                |                                                                                |                                                                           |   |
+|                          |                                                                                | Pollution                                                                      | Apart from energy loss, no disadvantages.                                 |   |
++--------------------------+--------------------------------------------------------------------------------+--------------------------------------------------------------------------------+---------------------------------------------------------------------------+---+
+|                          |                                                                                |                                                                                |                                                                           |   |
++--------------------------+--------------------------------------------------------------------------------+--------------------------------------------------------------------------------+---------------------------------------------------------------------------+---+
+| Environmental influences | Explosion hazard in certain environments; relatively sensitive to temperature. | Sensitive to temperature fluctuations; Fire hazard in case of leaks.           | Does not cause explosions; Insensitive to temperatures.                   |   |
++--------------------------+--------------------------------------------------------------------------------+--------------------------------------------------------------------------------+---------------------------------------------------------------------------+---+
+| Energy storage           | Difficult and only in small quantities using batteries                         | Within certain limits, using gases                                             | Easy                                                                      |   |
++--------------------------+--------------------------------------------------------------------------------+--------------------------------------------------------------------------------+---------------------------------------------------------------------------+---+
+| Energy transport         | Unlimited, but with energy loss                                                | Up to 100 m with flow velocity of v = 2-6 m/s, signal velocity up to 1000 m/s. | Up to 1000 m with flow velocity v = 20-40 m/s, signal velocity 20-40 m/s. |   |
++--------------------------+--------------------------------------------------------------------------------+--------------------------------------------------------------------------------+---------------------------------------------------------------------------+---+
+| Working speed            |                                                                                | v = 0.5 m/s                                                                    | v = 1.5 m/s                                                               |   |
++--------------------------+--------------------------------------------------------------------------------+--------------------------------------------------------------------------------+---------------------------------------------------------------------------+---+
 
 : Comparison with other technologies
 
@@ -159,7 +159,7 @@ Where:
 
 \- $e$ is the actual vapor pressure of water in the air.
 
- - $e_s$ is the saturation vapor pressure at the same temperature.
+-   $e_s$ is the saturation vapor pressure at the same temperature.
 
 ##### Temperature Dependence
 
@@ -175,7 +175,7 @@ Where:
 
 \- $L$ is the latent heat of vaporization,
 
- - $R_v$ is the specific gas constant for water vapor,
+-   $R_v$ is the specific gas constant for water vapor,
 
 \- $T$ is the absolute temperature in Kelvin.
 
@@ -189,11 +189,9 @@ Where:
 
 The follwoing part explains the components required to use pneumatic systems. The structure is composed of 5 main components: Power Supply, Actuators, Conductors, Control valves and Air conditioning.
 
-+---------------------------------------------------+-------------------------------------------------------+
-| Structure                                         | Example                                               |
-+===================================================+=======================================================+
-| ![](images/clipboard-2333093332.png){width="60%"} | ![](images/clipboard-3902604058.png){width="80%"}     |
-+---------------------------------------------------+-------------------------------------------------------+
+| Structure | Example |
+|----|----|
+| ![](images/clipboard-2333093332.png){width="60%"} | ![](images/clipboard-3902604058.png){width="80%"} |
 
 ![](images/clipboard-1185823059.png){fig-align="center" width="60%"}
 
@@ -235,11 +233,65 @@ The follwoing part explains the components required to use pneumatic systems. Th
     -   Lubricators – add a fine mist of oil to reduce friction in moving parts
     -   These components are often grouped into FRL units (Filter-Regulator-Lubricator).
 
+### Types of Compressors in Pneumatic Systems
+
+In pneumatic automation, compressors are the primary energy source, converting atmospheric air into pressurized air that powers actuators and control systems. The selection of a compressor depends on factors like required pressure, flow rate, duty cycle, and application environment. Compressors are broadly categorized into positive displacement and dynamic types, each with distinct operating principles.
+
+#### Reciprocating Compressors (Positive Displacement)
+
+\- Operate using pistons driven by a crankshaft.
+
+\- Air is drawn into a cylinder and compressed by the piston’s motion.
+
+-   Common in small-scale applications and intermittent use.
+
+-   Can be single-stage (for low pressure) or multi-stage (for higher pressure).
+
+Example: Used in automotive workshops and small pneumatic tools.
+
+#### Rotary Screw Compressors (Positive Displacement)
+
+-   Use two intermeshing helical screws to compress air continuously.
+
+\- Efficient for continuous operation and high-volume air delivery.
+
+\- Low maintenance and quieter than reciprocating types.
+
+Example: Ideal for industrial automation lines and manufacturing plants.
+
+#### Vane Compressors (Positive Displacement)
+
+\- Feature a rotor with sliding vanes inside an eccentric housing.
+
+\- As the rotor turns, vanes slide in and out, trapping and compressing air.
+
+\- Compact and suitable for moderate pressure applications.
+
+Example: Used in packaging machinery and small automation systems.
+
+#### Centrifugal Compressors (Dynamic)
+
+\- Use a high-speed impeller to accelerate air outward.
+
+\- Air pressure increases as velocity is converted into pressure via a diffuser.
+
+\- Suitable for large-scale, high-flow applications.
+
+Example: Found in HVAC systems and large industrial plants.
+
+#### Axial Compressors (Dynamic)
+
+\- Air flows parallel to the axis through multiple rotor and stator stages.
+
+\- Extremely efficient at high flow rates and pressures.
+
+\- Typically used in aerospace and gas turbines, not common in standard pneumatics.
+
+Summary Table: Compressor Types
+
 ### Pneumatic actuators.
 
 ### Pneumatic valves.
-
-### Pneumatic circuits with Simscape /Fluids.
 
 ### Pneumatic sequences.
 
